[gd_scene load_steps=3 format=3 uid="uid://c1lmfdelwaxbs"]

[ext_resource type="Script" path="res://scripts/UI/StandardUiPanel.gd" id="1_esuhu"]
[ext_resource type="Script" path="res://scripts/audio/AudioBusManager.gd" id="2_sqwkv"]

[node name="OptionUI" type="Control" node_paths=PackedStringArray("initialFocus")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_esuhu")
initialFocus = NodePath("Button")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 372.0
offset_right = 1147.0
offset_bottom = 650.0

[node name="Button" type="Button" parent="."]
layout_mode = 2
offset_left = 726.0
offset_top = 506.0
offset_right = 844.0
offset_bottom = 546.0
text = "Open option 2"

[node name="back" type="Button" parent="."]
layout_mode = 2
offset_left = 118.0
offset_top = 581.0
offset_right = 236.0
offset_bottom = 621.0
text = "back"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 717.0
offset_top = 17.0
offset_right = 784.0
offset_bottom = 43.0
text = "Option 1
"

[node name="AudioBusManager" type="Node" parent="."]
script = ExtResource("2_sqwkv")

[connection signal="pressed" from="Button" to="." method="requestPanelSwitch" binds= ["option2", false]]
[connection signal="pressed" from="back" to="." method="goBack"]
